Added Metrics(Counter and Gauge)

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,3 +21,9 @@ spring:
     password: secret
   jackson:
     property-naming-strategy: SNAKE_CASE
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
